--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -1,12 +1,12 @@
 %A dedication is an honorific statement from the author to a person or group to 
 %whom the author commends the effort and product of the dissertation. Most 
-%dedications are short statements of tribute beginning with “To…”. No heading is 
+%dedications are short statements of tribute beginning with √íTo√â√ì. No heading is 
 %required on the dedication page. The text of short dedications should be 
 %centered between the left and right margins and 2? from the top of the page.
 
 \begin{center}
 \vspace*{52pt}
-Dedication\ldots
+To my family, friends, 146 
 \end{center}
 
 \pagebreak
